--- a/index.html
+++ b/index.html
@@ -16,29 +16,6 @@
         <title>Beyontec</title>
     </head>
     <body ng-app="claims">
-        <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="topheader">
-                            <tbody>
-                                <tr>
-                                    <td width="3%" align="center"><i class="fa fa-bars toggle-menu menu-left" style="font-size: 24px; color: #666; cursor: pointer;" ng-click="navbar = !navbar"></i>
-                                    <td width="30%" align="left"><img src="img/Beyontec_logo1.png" alt=""/></td>
-                                    <td height="67">&nbsp;</td>
-                                    <td width="25%" align="right"><img src="img/Beyontec_Identity_CMYK_Y60p-Horizontal-BG-Alpha.png" alt=""/></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <ui-view></ui-view>
-                    </td>
-                </tr>
-            </tbody>
-        </table> -->
         <header class="clearfix">
             <div class="">
                 <span class="float-left" ng-click="navbar = !navbar"><i class="fa fa-bars toggle-menu menu-left"></i></span>
@@ -80,12 +57,12 @@
                     <uib-accordion-heading> Medical Claims </uib-accordion-heading>    
                     <uib-accordion close-others="true">
                         <div uib-accordion-group class="panel-default child-panel" is-open="true">
-                            <uib-accordion-heading> <h3>Eclaims Claims</h3> </uib-accordion-heading>
+                            <uib-accordion-heading> <h3>E-Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'eclaims' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
                         </div>
-                        <div uib-accordion-group class="panel-default child-panel" is-open="true">
+                        <div uib-accordion-group class="panel-default child-panel">
                             <uib-accordion-heading> <h3>Reimbursement Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'reimburs' })">User Assignment</h4>
