--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         </nav>
         <ui-view></ui-view> 
     </body>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
@@ -84,7 +86,6 @@
     <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="bower_components/angular-ui-carousel/dist/ui-carousel.js"></script>
     <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
