--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-3.0.3.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="app.js"></script>
     <!-- Registration -->
