--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.min.css">
         <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css"/>
         <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css"/>
+        <link rel="stylesheet" href="bower_components/ng-notify/dist/ng-notify.min.css"/>
         <link rel="stylesheet" href="css/open-iconic.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/page.css" />
@@ -94,6 +95,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.min.js"></script>
+    <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-3.0.3.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
