--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading> Medical Claims </uib-accordion-heading>    
                     <uib-accordion close-others="true">
-                        <div uib-accordion-group class="panel-default child-panel" is-open="true">
+                        <!-- <div uib-accordion-group class="panel-default child-panel" is-open="true">
                             <uib-accordion-heading> <h3>E-Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'eclaims' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
-                        </div>
+                        </div> -->
+                        <h3>E-Cliams</h3>
                         <div uib-accordion-group class="panel-default child-panel">
                             <uib-accordion-heading> <h3>Reimbursement Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
