Registration & Reimbursement Changes..

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </nav>
         <ui-view></ui-view> 
     </body>
+    <!-- External Libraies -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
@@ -100,6 +101,9 @@
     <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-3.0.3.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+    <!-- External Libraies -->
 
     <script src="app.js"></script>
     <!-- Registration -->
