--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script src="lib/ui-bootstrap-tpls-3.0.3.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
-    <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+    <!-- <script src="bower_components/angular-translate/angular-translate.min.js"></script> -->
     <!-- External Libraies -->
 
     <script src="app.js"></script>
