Elcaim File Rename Changes..

--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading> Medical Claims </uib-accordion-heading>    
                     <uib-accordion close-others="true">
-                        <!-- <div uib-accordion-group class="panel-default child-panel" is-open="true">
+                        <div uib-accordion-group class="panel-default child-panel" is-open="true">
                             <uib-accordion-heading> <h3>E-Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'eclaims' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
-                        </div> -->
-                        <h3>E-Cliams</h3>
+                        </div>
                         <div uib-accordion-group class="panel-default child-panel">
                             <uib-accordion-heading> <h3>Reimbursement Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
@@ -117,7 +116,7 @@
     <script src="resources/user-assignment/controller/user-assignment.controller.js"></script>
     <script src="resources/user-assignment/service/user-assignment.service.js"></script>
     <!-- Eclaim -->    
-    <script src="resources/eclaim/controller/eclaim.controller.js"></script>
+    <script src="resources/eclaim/controller/eclaim-processing.controller.js"></script>
     <script src="resources/eclaim/service/eclaim.service.js"></script>
     <!-- Reimbursement Claims : processing -->
     <script src="resources/reimbursement-claims/controller/reimbursement-processing.controller.js"></script>
