--- a/index.html
+++ b/index.html
@@ -58,19 +58,21 @@
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading> Medical Claims </uib-accordion-heading>    
                     <uib-accordion close-others="true">
-                        <div uib-accordion-group class="panel-default child-panel" is-open="true">
+                        <!-- <div uib-accordion-group class="panel-default child-panel" is-open="true">
                             <uib-accordion-heading> <h3>E-Claims</h3> </uib-accordion-heading>
+                            <h4 ui-sref="eclaim-batch">Batch</h4>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'eclaims' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
-                        </div>
+                        </div> -->
+                        <h3>E-Claims</h3>
                         <div uib-accordion-group class="panel-default child-panel">
                             <uib-accordion-heading> <h3>Reimbursement Claims</h3> </uib-accordion-heading>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'reimburs' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
                         </div>
-                        <h3>PBM Cliams</h3>
+                        <h3>PBM Claims</h3>
                         <h3>Provider Paper Claims</h3>
                         <h3>Pre-Authorization</h3>
                     <uib-accordion>
