Created Reusable List View Component

--- a/index.html
+++ b/index.html
@@ -123,4 +123,8 @@
     <!-- Reimbursement Claims : processing -->
     <script src="resources/reimbursement-claims/controller/reimbursement-processing.controller.js"></script>
     <script src="resources/reimbursement-claims/service/reimbursement-processing.service.js"></script>
+
+    <!-- listView Component -->
+    <script src="resources/shared/listView-component/listview.component.js"></script>
+    <script src="resources/shared/listView-component/listview.service.js"></script>
 </html>
