user assignment screen changes

--- a/index.html
+++ b/index.html
@@ -127,4 +127,7 @@
     <!-- listView Component -->
     <script src="resources/shared/listView-component/listview.component.js"></script>
     <script src="resources/shared/listView-component/listview.service.js"></script>
+
+    <!-- User Assignment Component -->
+    <script src="resources/shared/userAssignment-component/userAssignment.component.js"></script>
 </html>
