listview component changes

--- a/index.html
+++ b/index.html
@@ -126,8 +126,12 @@
 
     <!-- listView Component -->
     <script src="resources/shared/listView-component/listview.component.js"></script>
-    <script src="resources/shared/listView-component/listview.service.js"></script>
+    <script src="resources/shared/listView-component/listview.component.service.js"></script>
 
     <!-- User Assignment Component -->
     <script src="resources/shared/userAssignment-component/userAssignment.component.js"></script>
+
+    <!-- Claims List View Component -->
+    <script src="resources/shared/claimsListView-component/claimslistview.component.js"></script>
+    <script src="resources/shared/claimsListView-component/claimslistview.component.service.js"></script>
 </html>
