wrapper directive for angular ui grid..

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     <uib-accordion close-others="true">
                         <!-- <div uib-accordion-group class="panel-default child-panel" is-open="true">
                             <uib-accordion-heading> <h3>E-Claims</h3> </uib-accordion-heading>
-                            <h4 ui-sref="eclaim-batch">Batch</h4>
                             <h4 ui-sref="claim-registration">Registration</h4>
                             <h4 ui-sref="user-assignment({ param: 'eclaims' })">User Assignment</h4>
                             <h4 ui-sref="finalization">Finalization</h4>
@@ -134,4 +133,7 @@
     <!-- Claims List View Component -->
     <script src="resources/shared/claimsListView-component/claimslistview.component.js"></script>
     <script src="resources/shared/claimsListView-component/claimslistview.component.service.js"></script>
+
+    <!-- shared -->
+    <script src="resources/shared/grid/grid-wrapper.js"></script>
 </html>
