finalization screen changes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
     <!-- listView Component -->
     <script src="resources/shared/listView-component/listview.component.js"></script>
     <script src="resources/shared/listView-component/listview.component.service.js"></script>
-
+    <!-- Finalization Component -->
+    <script src="resources/shared/finalization-component/finalization.component.js"></script>
+    <script src="resources/shared/finalization-component/finalization.component.service.js"></script>
     <!-- User Assignment Component -->
     <script src="resources/shared/userAssignment-component/userAssignment.component.js"></script>
 
