custom pagination included

--- a/index.html
+++ b/index.html
@@ -136,4 +136,9 @@
     <!-- Claims List View Component -->
     <script src="resources/shared/claimsListView-component/claimslistview.component.js"></script>
     <script src="resources/shared/claimsListView-component/claimslistview.component.service.js"></script>
+
+    <script src="resources/util/pagination/pagination.directive.js"></script>
+
+    <!-- remove this after use -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
 </html>
