--- a/resources/shared/grid/grid-wrapper.html
+++ b/resources/shared/grid/grid-wrapper.html
@@ -53,7 +53,7 @@
         <div ui-grid="gridOptions" ui-grid-pinning="" ui-grid-edit="" ng-if="inlineEdit"></div>
         <div ui-grid="gridOptions" ui-grid-pinning="" ng-if="!inlineEdit"></div>
     </div>
-    <div ng-show="$parent.noRecordsAvailable">
+    <div ng-show="noRecordsAvailable">
         No Record Available...
     </div>
 </div>
