--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/page.css" />
         <link rel="stylesheet" type="text/css" href="css/jPushMenu.css" />
+        <link rel="stylesheet" type="text/css" href="css/directiveCss.css" />
         <title>Beyontec</title>
     </head>
     <body ng-app="claims">
@@ -142,4 +143,6 @@
 
     <!-- remove this after use -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
+    <!-- Custome Directive -->
+    <script src="resources/directives/sampleDirective.js"></script>
 </html>
