claims list view directive created

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
     <!-- User Assignment Component -->
     <script src="resources/shared/userAssignment-component/userAssignment.component.js"></script>
 
-    <!-- Claims List View Component -->
-    <script src="resources/shared/claimsListView-component/claimslistview.component.js"></script>
-    <script src="resources/shared/claimsListView-component/claimslistview.component.service.js"></script>
-
     <!-- shared -->
     <script src="resources/shared/grid/grid-wrapper.js"></script>
     <script src="resources/util/pagination/pagination.directive.js"></script>
+
+    <!-- Claims List View Directive -->
+    <script src="resources/shared/claimsListView-directive/claimslistview.directive.js"></script>
+    <script src="resources/shared/claimsListView-directive/claimslistview.directive.service.js"></script>
 
     <!-- remove this after use -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
