claims list view changes

--- a/resources/util/pagination/pagination.html
+++ b/resources/util/pagination/pagination.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="pr-4">
     <div class="text-center">
         <ul ng-if="pager.pages.length" class="pagination">
             <li ng-class="{disabled:pager.currentPage === 1}">
