created finalization directive and implemented chnages

--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
     <!-- listView Component -->
     <script src="resources/shared/listView-component/listview.component.js"></script>
     <script src="resources/shared/listView-component/listview.component.service.js"></script>
-    <!-- Finalization Component -->
-    <script src="resources/shared/finalization-component/finalization.component.js"></script>
-    <script src="resources/shared/finalization-component/finalization.component.service.js"></script>
+
     <!-- User Assignment Component -->
     <script src="resources/shared/userAssignment-component/userAssignment.component.js"></script>
 
@@ -141,8 +139,12 @@
     <script src="resources/shared/claimsListView-directive/claimslistview.directive.js"></script>
     <script src="resources/shared/claimsListView-directive/claimslistview.directive.service.js"></script>
 
+    <!-- Finalization List View Directive -->
+    <script src="resources/shared/finalization-directive/finalizationlistview.directive.js"></script>
+
     <!-- remove this after use -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
+    
     <!-- Custome Directive -->
     <script src="resources/directives/sampleDirective.js"></script>
 </html>
