included outline css in user assignment screen

--- a/resources/shared/claimsListView-directive/claimslistview.directive.html
+++ b/resources/shared/claimsListView-directive/claimslistview.directive.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="col-sm-1">
-                <div ng-click="selectAllClaims()" class="align-middle selectline"><a href="javascript:void(0);" id="selectAll" style="font-size:75%;">{{selectAll ? 'De-SelectAll' : 'Select All'}}</a></div>
+                <div ng-click="selectAllClaims()" class="align-middle selectline outline-none"><a href="javascript:void(0);" id="selectAll" style="font-size:75%;">{{selectAll ? 'De-SelectAll' : 'Select All'}}</a></div>
             </div>
         </div>
         <table class="table">
