search directive renamed

--- a/index.html
+++ b/index.html
@@ -146,5 +146,5 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
     
     <!-- Custome Directive -->
-    <script src="resources/directives/sampleDirective.js"></script>
+    <script src="resources/directives/search.directive.js"></script>
 </html>
