search layout changes

--- a/resources/shared/finalization-directive/finalizationlistview.directive.html
+++ b/resources/shared/finalization-directive/finalizationlistview.directive.html
@@ -76,7 +76,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12" style="background-color:white;">
-        <pagination records-to-display="4" records="finalizationRecords" total-record-count="finalizationRecords.length" filtered-claims="filteredClaims"></pagination>
+    <div class="col-sm-12">
+        <div class="col-sm-12" style="background-color:white;height: 100%;">
+            <pagination records-to-display="4" records="finalizationRecords" total-record-count="finalizationRecords.length" filtered-claims="filteredClaims"></pagination>
+        </div>
     </div>
 </div>
