included list view directive

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
     <!-- Finalization List View Directive -->
     <script src="resources/shared/finalization-directive/finalizationlistview.directive.js"></script>
 
+    <!-- List View Directive -->
+    <script src="resources/shared/listView-directive/listview.directive.js"></script>
+
     <!-- remove this after use -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
     
