minor changes in pagination

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
     <script src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- External Libraies -->
 
     <script src="app.js"></script>
@@ -149,9 +150,6 @@
     <!-- List View Directive -->
     <script src="resources/shared/listView-directive/listview.directive.js"></script>
 
-    <!-- remove this after use -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore.js"></script>
-    
     <!-- Custome Directive -->
     <script src="resources/directives/search.directive.js"></script>
 </html>
