--- a/resources/util/pagination/pagination.html
+++ b/resources/util/pagination/pagination.html
@@ -1,20 +1,20 @@
 <div class="pr-4">
     <div class="text-center">
-        <ul ng-if="pager.pages.length" class="pagination">
+        <ul ng-if="pager.pages.length && pager.pages.length > 1" class="pagination">
             <li ng-class="{disabled:pager.currentPage === 1}">
-                <a ng-click="setPage(1)">First</a>
+                <a ng-click="setPage(1)"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
             </li>
             <li ng-class="{disabled:pager.currentPage === 1}">
-                <a ng-click="setPage(pager.currentPage - 1)">Previous</a>
+                <a ng-click="setPage(pager.currentPage - 1)"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
             </li>
             <li ng-repeat="page in pager.pages" ng-class="{active:pager.currentPage === page}">
                 <a ng-click="setPage(page)">{{page}}</a>
             </li>                
             <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-                <a ng-click="setPage(pager.currentPage + 1)">Next</a>
+                <a ng-click="setPage(pager.currentPage + 1)"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
             </li>
             <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-                <a ng-click="setPage(pager.totalPages)">Last</a>
+                <a ng-click="setPage(pager.totalPages)"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
